@@ -1,6 +1,8 @@
 package com.wcpe.quote;
 
 import java.time.Instant;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.UUID;
 
@@ -16,6 +18,6 @@ public record QuoteSnapshotExport(
     Instant exportedAt
 ) {
     public QuoteSnapshotExport {
-        manifest = Map.copyOf(manifest == null ? Map.of() : manifest);
+        manifest = Collections.unmodifiableMap(new LinkedHashMap<>(manifest == null ? Map.of() : manifest));
     }
 }
